@@ -163,6 +163,17 @@ comment|/** !OR */
 name|MUST_PASS_ONE
 block|}
 specifier|private
+specifier|static
+specifier|final
+name|Configuration
+name|conf
+init|=
+name|HBaseConfiguration
+operator|.
+name|create
+argument_list|()
+decl_stmt|;
+specifier|private
 name|Operator
 name|operator
 init|=
@@ -706,14 +717,6 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-name|Configuration
-name|conf
-init|=
-name|HBaseConfiguration
-operator|.
-name|create
-argument_list|()
-decl_stmt|;
 name|byte
 name|opByte
 init|=
@@ -809,14 +812,6 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-name|Configuration
-name|conf
-init|=
-name|HBaseConfiguration
-operator|.
-name|create
-argument_list|()
-decl_stmt|;
 name|out
 operator|.
 name|writeByte
